--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@uidotdev/usehooks": "^2.4.1",
-    "polished": "^4.3.1",
     "axios": "^1.8.1",
+    "dayjs": "^1.11.13",
+    "polished": "^4.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
