--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,13 +2,15 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
+      "@apis/*": ["src/apis/*"],
       "@components/*": ["src/components/*"],
       "@constants/*": ["src/constants/*"],
       "@hooks/*": ["src/hooks/*"],
       "@stores/*": ["src/stores/*"],
       "@layout/*": ["src/layout/*"],
       "@pages/*": ["src/pages/*"],
-      "@styles/*": ["src/styles/*"]
+      "@styles/*": ["src/styles/*"],
+      "@utils/*": ["src/utils/*"]
     }
   },
   "exclude": ["node_modules", "dist"]
