--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.8.1",
     "dayjs": "^1.11.13",
+    "fs": "^0.0.1-security",
     "polished": "^4.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
