--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
     "@uidotdev/usehooks": "^2.4.1",
-    "polished": "^4.3.1",
-
     "axios": "^1.8.1",
+    "framer-motion": "^12.4.10",
+    "hamburger-react": "^2.5.2",
     "polished": "^4.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
